Fix margin overflowing #content-main

--- a/app/src/home/main.sass
+++ b/app/src/home/main.sass
@@ -28,6 +28,7 @@ body
 
 #content-main
   display: none
+  overflow: auto
 
   &.visible
     display: block
